# ProcessScope

./: .gitignore  CMakeLists.txt  LICENSE  ProcessScope.sln  ProcessScope.vcxproj  README.md
src/: cli.cpp  cli.h  main.cpp  memory_scan.cpp  memory_scan.h  module_enum.cpp  module_enum.h  process_enum.cpp  process_enum.h  risk_score.cpp  risk_score.h  signer_verify.cpp  signer_verify.h  thread_enum.cpp  thread_enum.h  util.cpp  util.h
